--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
   },
   "dependencies": {
     "classnames": "^2.2.6",
+    "react-dnd": "^11.1.3",
     "react-sizeme": "^2.6.12",
     "react-stack-grid": "^0.7.1"
   }
