--- a/package.json
+++ b/package.json
@@ -32,7 +32,9 @@
     "@types/react-test-renderer": "~16.9.0"
   },
   "dependencies": {
+    "@juggle/resize-observer": "^3.2.0",
     "classnames": "^2.2.6",
+    "react-cool-dimensions": "^1.1.3",
     "react-dnd": "^11.1.3",
     "react-sizeme": "^2.6.12",
     "react-stack-grid": "^0.7.1"
