--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "@types/jest": "^24.0.0",
     "@types/react": "~16.9.0",
     "@types/react-dom": "~16.9.0",
-    "@types/react-test-renderer": "~16.9.0"
+    "@types/react-test-renderer": "~16.9.0",
+    "webpack-bundle-analyzer": "^3.8.0"
   },
   "dependencies": {
     "@juggle/resize-observer": "^3.2.0",
